Started working on notes
